# liblzma-rs

./: .gitmodules  Cargo.lock.msrv  Cargo.toml  README.md  THANKS
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: update-xz.sh
.github/workflows/: main.yml  publish.yml  release.yml  update-xz.yml  webassembly.yml
liblzma-sys/: Cargo.toml  README.md  build.rs  config.h
liblzma-sys/src/: bindgen.rs  bindgen_wrap.rs  lib.rs  manual.rs  wasm_shim.rs
liblzma-sys/wasm-shim/: stdlib.h
lzma-sys/: build.rs  config.h
lzma-sys/src/: lib.rs
src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
src/bufread/: buffered.rs
src/write/: auto_finish.rs
systest/: Cargo.toml  build.rs
tests/: xz.rs
