[package]
name = "liblzma"
version = "0.3.4"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Portable-Network-Archive Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lzma", "xz", "encoding", "wasm"]
repository = "https://github.com/portable-network-archive/liblzma-rs"
homepage = "https://github.com/portable-network-archive/liblzma-rs"
description = """
Rust bindings to liblzma providing Read/Write streams as well as low-level
in-memory encoding/decoding. forked from xz2.
"""
categories = ["compression", "api-bindings"]
edition = "2021"
exclude = [".github/"]

[workspace]
members = ["systest"]

[dependencies]
liblzma-sys = { path = "liblzma-sys", version = "0.3.7", default-features = false }
tokio-io = { version = "0.1.12", optional = true }
futures = { version = "0.1.26", optional = true }
num_cpus = { version = "1.16.0", optional = true }

[dev-dependencies]
rand = "0.8.0"
quickcheck = "1.0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-core = "0.1.17"

[features]
default = ["bindgen"]
tokio = ["tokio-io", "futures"]
static = ["liblzma-sys/static"]
parallel = ["liblzma-sys/parallel", "num_cpus"]
bindgen = ["liblzma-sys/bindgen"]
wasm = ["liblzma-sys/wasm"]

[package.metadata.docs.rs]
features = ["tokio-io", "futures", "parallel"]
