[package]
name = "liblzma-sys"
version = "0.1.23"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Portable-Network-Archive Developers"]
build = "build.rs"
links = "lzma"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/portable-network-archive/liblzma-rs"
homepage = "https://github.com/portable-network-archive/liblzma-rs"
description = """
Raw bindings to liblzma which contains an implementation of LZMA and xz stream
encoding/decoding.

High level Rust bindings are available in the `liblzma` crate.
"""
categories = ["external-ffi-bindings"]
edition = "2018"

[dependencies]
libc = "0.2.67"

[build-dependencies]
cc = { version = "1.0.49", features = ["parallel"] }
pkg-config = "0.3.18"

[features]
default = ["threading"]
static = []
threading = []
