[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
edition = "2021"
publish = false

[dependencies]
liblzma-sys = { path = "../liblzma-sys" }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"

[features]
bindgen = ["liblzma-sys/bindgen"]
